# pmcli

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  codeql.yml  release.yml
src/: config.rs  main.rs  models.rs
src/commands/: add_task.rs  create.rs  crypto.rs  done_task.rs  export.rs  git.rs  list.rs  mod.rs  note.rs  tasks.rs  tui.rs
