[package]
name = "pmcli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ratatui = "0.26"
crossterm = "0.27"
git2 = "0.18"
aes-gcm = "0.10"
rand = "0.8"
base64 = "0.21"
toml = "0.8"
sha2 = "0.10"
colored = "2.1"
whoami = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
